feat: addFriend, getFriends, createPost, getPosts
